...
      return;
    }
    setPage(page + 1);
    fetchGroupProfiles();
  };
  return (
    <View style={styles.container} testID='groupProfileScreen'>
      <FlatList
        contentContainerStyle={styles.listContent}
        data={groupProfileList}
        renderItem={renderRow}
        keyExtractor={keyExtractor}
        initialNumToRender={oneScreensWorth}
...
