...
      return;
    }
    setPage(page + 1);
    fetchHanhChinhVNS();
  };
  return (
    <View style={styles.container} testID='hanhChinhVNScreen'>
      <FlatList
        contentContainerStyle={styles.listContent}
        data={hanhChinhVNList}
        renderItem={renderRow}
        keyExtractor={keyExtractor}
        initialNumToRender={oneScreensWorth}
...
